# Outfit-Analyzer

./: .clang-format  .gitignore  CMakeLists.txt  clothes.h  main.cpp
client/: cat_build.py  catalog.json  outfit_pb2.py  outfit_pb2_grpc.py  vision.py
proto/: outfit.proto
server/: FitServ.cpp  FitServ.h  clothes.h  main.cpp  outfit.grpc.pb.cc  outfit.grpc.pb.h  outfit.pb.cc  outfit.pb.h
